# tauri-todo-list

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  update_version.py
src/: App.vue  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: clipboard.rs  implement.rs  lib.rs  logger.rs  main.rs  manager.rs
src/components/: Task.vue
